submission/botOverlayStyles.css
.overlay.message {
    display: none;
    z-index: 250;

    background: rgb(0 0 0 / 0.3);
    backdrop-filter: grayscale(0.5);

    justify-content: center;
    align-items: flex-end;
}

.bot-mascot {
    position: relative;
    right: -65%;
    bottom: -40%;
    height: 60%;
    pointer-events: none;
    user-select: none;
}

.bot-visible-message {

}

.bot-debug-message {
    background: #80808057;
    color: white;
    border-style: solid;
    border-color: #97979773;
    border-width: 2px;
    border-radius: 5px;
    width: 97%;
    pointer-events: none;
    user-select: none;
    white-space: pre-line;
    padding: 0.25rem;
    font-family: roboto;
    font-weight: 500;
}

.bot-message-container {
    position: absolute;
    bottom: 0;
    background: #331453;
    pointer-events: none;
    user-select: none;
    font-size: 10px;
    display: flex;
    flex-direction: column;
    flex-wrap: nowrap;
    align-content: flex-start;
    align-items: center;
    justify-content: flex-start;
    border-radius: 20px 20px 0 0;
    padding: 1rem;
    border-width: 3px 3px 0 3px;
    border-style: solid;
    border-color: rgb(255 255 255 / 0.6);
    color: white;
}

.thinking {
        font-size: 0.95rem;
        color: #a6a3a3;
        margin: 0.5rem 0;
    display: none;
    width: 100%;
    font-weight: 600;
    text-transform: capitalize;
}

.dots::after {
    content: "";
    display: inline-block;
    width: 1em;
    text-align: left;
    animation: dots .75s steps(4, end) infinite;
}

@keyframes dots {
    0% {
        content: "";
    }
    25% {
        content: ".";
    }
    50% {
        content: "..";
    }
    75% {
        content: "...";
    }
    100% {
        content: "";
    }
}

.mascot-avatar {
    height: 5rem;
    width: 5rem;
    overflow: hidden;
    border-radius: 40rem;
    border-style: solid;
    border-width: 0.25rem;
    margin: 0.25rem;
    animation: avatarColorShift 5s cubic-bezier(0.43, 0.09, 0.58, 0.92) infinite alternate;
}

.bot-message-icon {
    height: 8rem;
    border-radius: 40rem;
    overflow: hidden;
    margin-left: -1.5rem;
}


@keyframes avatarColorShift {
    0% {
        border-color: #cf22d2;
    }
    25% {
        border-color: #032b77;
    }
    50% {
        border-color: #087ac4;
    }
    75% {
        border-color: rgb(9 169 206 / 0.5);
    }
    100% {
        border-color: #cf22d2;
    }
}

.bot-visible-message {
    width: 100%;
    background: rgb(255 255 255 / 0.15);
    border-radius: 4rem;
    border-width: 0.125rem;
    border-color: white;
    border-style: solid;
    margin: 1rem 0;
}

.bot-message-container .text{
    width: 70%;
    display: flex;
    align-content: center;
    align-items: center;
    flex-wrap: wrap;
    justify-content: flex-start;
    flex-direction: row;
    font-size: 1.25rem;
    padding-left: 1rem;
}

